samples/SEMANTIC_ERROR/if_undef_var.php
<?php
declare(strict_types=1);
//ERROR[5] and ERROR[3] but 5 will be first
if( $a === foo())
{
    $a = 1;
}
